Styles.css
body {
  background-color: #ebeae8;
}

/*Modified*/

#banner {
  position: relative;
  display: flex;
  padding-top: 20px;
  padding-bottom: 5px;
  padding-left: 0px;
  width: 90%;
  height: auto;
  left: 5%;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  z-index: 9;
  justify-content: start;
  background-color: white;
}

h1 {
  font-family: "Manrope", sans-serif;
  font-size: 3.5em;
  color: #753188;
  bottom: 15px;
  position: relative;
  left: 10.1%;

  margin: 10px;
}
h3 {
  font-family: "Manrope", sans-serif;
  color: #753188;
  position: absolute;
  top: 55%;
  left: 11.2%;
}

section {
  position: relative;
  width: 90%;
  max-height: 345px;
  left: 5%;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  background-color: white;
}

.instructions {
  top: 10%;
  width: 350px;
  display: inline-flex;
  justify-content: center;
  margin-left: 9%;
}

#sign {
  float: right;
  margin-right: 5%;
  width: 400px;
  max-height: 350px;
}

img {
  max-width: 100%;
  z-index: 1000;
}

#girl {
  position: relative;
  max-width: 150%;
  max-height: 480px;
  right: 40%;
  bottom: 130px;
}

form {
  position: relative;
  width: 300px;
  height: 350px;
  min-height: 275px;
  border-radius: 5px;
  display: flex;
  right: 5%;
  justify-content: start;
  padding-left: 5px;
}

#sign ul {
  padding: 0px;
}

#sign ul li {
  color: white;
}

#sign ul li p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.2em;
}

.food {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  border-width: 1.5px;
  border-style: solid;
  border-color: #753188;
  padding: 6px;
  position: relative;
  top: 55px;
  border-radius: 9px;
  width: 230px;
  height: 20px;
  background-color: white;
}

.food {
  text-transform: lowercase;
}

.suggest {
  position: relative;
  top: 57px;
  width: 90%;
  left: 5%;
  background-color: #b983ff;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  z-index: 9;
}

.container {
  padding-left: 3%;
  position: absolute;
  margin-top: 10px;
}

h4 {
  font-family: "Manrope", sans-serif;
  font-weight: bolder;
  color: #753188;
}

#Cat {
  position: absolute;
  top: 5px;
  left: 5%;
}

#Opt {
  position: absolute;
  top: 92px;
  left: 5%;
}

#Amnt {
  position: absolute;
  top: 172px;
  left: 5%;
}

#testIn {
  visibility: visible;
  position: absolute;
  margin-top: 55%;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  border-width: 1.5px;
  border-style: solid;
  border-color: #753188;
  padding: 6px;
  border-radius: 9px;
  background-color: white;
  width: 230px;
  height: 20px;
  z-index: 1;
}

.suggestMe {
  position: absolute;
  margin-top: 70%;
  left: 8%;
  background-color: #b983ff;
  width: 220px;
  z-index: 9999;
  max-height: 101px;
  overflow-y: auto;
}

.suggest div:hover,
.suggestMe div:hover {
  color: white;
  cursor: pointer;
}

.amount {
  visibility: visible;
  position: absolute;
  top: 222px;
  width: 182px;
  border-width: 1.5px;
  border-style: solid;
  border-color: #753188;
  padding: 6px;
  border-radius: 9px;
  height: 20px;
  background-color: white;
}

#send {
  position: absolute;
  top: 285px;
  min-width: 80px;
  height: 35px;
  padding: 3px;
  background-color: #753188;
  border: 1px solid #00587a;
  border-radius: 5px;
  color: white;
}

#results {
  position: absolute;
  top: 285px;
  left: 68%;
  padding: 3px;
  min-width: 80px;
  height: 35px;
  background-color: #753188;
  border: 1px solid #00587a;
  border-radius: 5px;
  color: white;
}

#send:hover,
#results:hover {
  background-color: #7267cb;
  color: white;
  cursor: pointer;
}

#tata {
  visibility: hidden;
  position: relative;
  width: 90%;
  background-color: #753188;
  border-color: blue;
  opacity: 0.85;
  border-radius: 4px;
}

#tata thead tr {
  background-color: #001f3f;
}

#tata thead tr th,
#tata tbody tr td {
  font-family: Arial, Helvetica, sans-serif;
  color: white;
}

#showResults {
  background-color: transparent;
  position: absolute;
  min-height: 70%;
  width: 50%;
  top: 0%;
  left: 47.5%;
  display: flex;
  justify-content: center;
  z-index: 9999;
}

@media screen and (max-width: 1069px) {
  #girl {
    max-width: 140%;
    right: 25%;
    bottom: 25px;
  }

  #sign {
    margin-right: 7%;
    width: 300px;
    max-height: 350px;
  }
}

@media screen and (max-width: 876px) {
  #banner {
    width: 80%;
    left: 10%;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: #753188;
    /*border: 2px solid #753188;*/
  }

  h1 {
    left: 0%;
    color: white;
  }

  h3 {
    position: unset;
    left: 0%;
    margin: 0;
    color: white;
  }

  #main {
    width: 80%;
    left: 10%;
    /*border: 2px solid #753188*/
  }

  .instructions {
    width: 83%;
  }

  form {
    right: 0%;
    justify-content: center;
  }

  #girl {
    max-width: 135%;
    right: 25%;
    bottom: 120px;
  }

  #sign {
    display: none;
  }

  #showResults {
    position: absolute;
    min-height: 70%;
    width: 90%;
    top: 120%;
    left: 5%;
  }
}

@media screen and (max-width: 415px) {
  body {
    background-color: #ebeae8;
    padding: 4px;
  }

  #banner {
    left: 2.5%;
    background-color: #753188;
    width: 95%;
    border-color: #4d194d;
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
  }

  #main {
    max-height: none;
    height: 450px;
    left: 2.5%;
    width: 95%;
    background-color: white;
    border-color: #544179;
    border-bottom-right-radius: 15px;
    border-bottom-left-radius: 15px;
  }

  h1 {
    font-size: 3.5em;
    color: white;
  }

  h3 {
    font-size: 1.25em;
    color: white;
  }

  img {
    top: 13px;
    width: 55px;
    height: 55px;
  }

  .food,
  #testIn,
  .amount {
    width: 0px;
    min-width: 200px;
    margin-left: -3%;
  }

  #testIn {
    margin-top: 63%;
  }

  form {
    height: 425px;
    right: 0%;
  }

  #Cat,
  #Opt,
  #Amnt {
    left: 2%;
  }

  #send {
    width: 180px;
    left: 18px;
    font-size: 20px;
    background-color: #753188;
  }

  #results {
    font-size: 20px;
    top: 350px;
    width: 180px;
    left: 18px;
    background-color: #753188;
  }

  .suggest {
    width: 96%;
    left: -2px;
  }
  .suggestMe {
    width: 92%;
    margin-top: 177px;
    left: 7px;
  }

  #tata {
    background-color: #7267cb;
  }
}

